# GameEngine

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  GenerateVisualStudio2017Project.bat  GenerateVisualStudio2019Project.bat  GenerateVisualStudio2022Project.bat
Application/LitRenderer/: CMakeLists.txt  Integrator.cpp  Integrator.h  LDRFilm.cpp  LDRFilm.h  LitRenderer.cpp  LitRenderer.h  Material.cpp  Material.h  PreInclude.h  Scene.cpp  Scene.h  TaskGraph.cpp  TaskGraph.h  WinMain.cpp
Application/MISTestbed/: CMakeLists.txt  main.cpp
Application/SimpleGame/: CMakeLists.txt  SimpleTimer.h  WinMain.cpp
Engine/: CMakeLists.txt
Engine/Include/: GEInclude.h  GEInput.h  GEPredefinedMacros.h  GERender.h  GEScene.h
Engine/Source/: ErrorReport.h  GameEngineMain.cpp  PreIncludeFiles.h  PreIncludeFilesWindows.h
Engine/Source/Core/: GameEngine.cpp  GameEngine.h
Engine/Source/Render/: FrameGraph.cpp  FrameGraph.h  GfxInterface.cpp  GfxInterface.h  Mesh.cpp  Mesh.h  RenderSystem.cpp  RenderSystem.h  TransientBufferRegistry.cpp  TransientBufferRegistry.h
Engine/Source/Render/RHI/: GfxD3D12.cpp  GfxD3D12.h
Engine/Source/Scene/: Components.cpp  Components.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h
Foundation/: CMakeLists.txt  Dummy.cpp
Foundation/Base/: FileHelper.h  MemoryHelper.h  ScopeHelper.h  Serialization.h
Foundation/Math/: Geometry.h  HelperFunctions.h  Matrix.h  PredefinedConstantValues.h  Rotation.h  Vector.h
GfxInterface/Include/: GfxInterface.h
GfxInterface/Source/D3D11/: CMakeLists.txt
GfxInterface/Source/D3D11/Include/: D3D11Buffer.h  D3D11CommandQueue.h  D3D11DeviceContext.h  D3D11GraphicDevice.h  D3D11GraphicModule.h  D3D11Include.h  D3D11PipelineState.h  D3D11SamplerState.h  D3D11Shader.h  D3D11SwapChain.h  D3D11Texture.h
GfxInterface/Source/D3D11/Source/: D3D11Buffer.cpp  D3D11CommandQueue.cpp  D3D11DeviceContext.cpp  D3D11GfxUniformBuffer.cpp  D3D11GraphicDevice.cpp  D3D11GraphicModule.cpp  D3D11PipelineState.cpp  D3D11SamplerState.cpp  D3D11Shader.cpp  D3D11SwapChain.cpp  D3D11Texture.cpp
GfxInterface/Source/Vulkan/: CMakeLists.txt
GfxInterface/Source/Vulkan/Include/: VulkanCommandQueue.h  VulkanDeviceContext.h  VulkanDeviceResource.h  VulkanGfxDevice.h  VulkanGfxModule.h  VulkanGraphicDevice.h  VulkanGraphicModule.h  VulkanInclude.h  VulkanPipelineState.h  VulkanShader.h  VulkanSwapChain.h
GfxInterface/Source/Vulkan/Source/: VulkanCommandQueue.cpp  VulkanDeviceContext.cpp  VulkanGfxDevice.cpp  VulkanGfxModule.cpp  VulkanGraphicDevice.cpp  VulkanGraphicModule.cpp  VulkanPipelineState.cpp  VulkanShader.cpp  VulkanSwapChain.cpp
